refactor: Split out cell and repl as libraries in Gradle modules